--- a/index.css
+++ b/index.css
@@ -311,6 +311,14 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 20px;
     line-height: 24px;
   }
+   #hero .social-links a {
+    font-size: 24px;
+    display: inline-block;
+    color: #45505b;
+    line-height: 1;
+    margin: 10px;
+    transition: 0.3s;
+  }
 }
 
 /*--------------------------------------------------------------
@@ -847,7 +855,7 @@ section {
   display: inline-block;
   color: #2e7eb3;
   line-height: 1;
-  margin-right: 20px;
+ margin: 10px;
   transition: 0.3s;
 }
 
