--- a/index.css
+++ b/index.css
@@ -853,7 +853,7 @@ section {
 #footer .social-links a {
   font-size: 24px;
   display: inline-block;
-  color: #2e7eb3;
+  color: #0065c4;
   line-height: 1;
  margin: 10px;
   transition: 0.3s;
