--- a/index.css
+++ b/index.css
@@ -239,7 +239,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("img/hero-bg.jpg") top right no-repeat;
+  background: url("img/hero-bg.webp") top right no-repeat;
   background-size: cover;
   position: relative;
 }
