--- a/index.css
+++ b/index.css
@@ -467,7 +467,14 @@ section {
 .resume .resume-item h5 {
   font-size: 16px;
   background: #f7f8f9;
-  padding: 5px 15px;
+  padding: 5px 1px;
+  display: inline-block;
+  font-weight: 600;
+  margin-bottom: 10px;
+} 
+.resume .resume-item h6 {
+  font-size: 16px;
+  padding: 1px 1px;
   display: inline-block;
   font-weight: 600;
   margin-bottom: 10px;
