--- a/index.css
+++ b/index.css
@@ -1,26 +1,22 @@
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
 body {
   font-family: "Open Sans", sans-serif;
   color: #272829;
 }
-
 a {
   color: #0563bb;
 }
-
 a:hover {
   color: #067ded;
   text-decoration: none;
 }
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Raleway", sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: Raleway, sans-serif;
 }
-/*--------------------------------------------------------------
-# Back to top button
---------------------------------------------------------------*/
 .back-to-top {
   position: fixed;
   display: none;
@@ -34,23 +30,17 @@ h1, h2, h3, h4, h5, h6 {
   transition: display 0.5s ease-in-out;
   z-index: 99999;
 }
-
 .back-to-top i {
   font-size: 24px;
   position: absolute;
   top: 7px;
   left: 8px;
 }
-
 .back-to-top:hover {
   color: #fff;
   background: #0678e3;
   transition: background 0.2s ease-in-out;
 }
-
-/*--------------------------------------------------------------
-# Preloader
---------------------------------------------------------------*/
 #preloader {
   position: fixed;
   top: 0;
@@ -61,7 +51,6 @@ h1, h2, h3, h4, h5, h6 {
   overflow: hidden;
   background: #fff;
 }
-
 #preloader:before {
   content: "";
   position: fixed;
@@ -76,37 +65,27 @@ h1, h2, h3, h4, h5, h6 {
   -webkit-animation: animate-preloader 1s linear infinite;
   animation: animate-preloader 1s linear infinite;
 }
-
 @-webkit-keyframes animate-preloader {
   0% {
-    transform: rotate(0deg);
+    transform: rotate(0);
   }
   100% {
     transform: rotate(360deg);
   }
 }
-
 @keyframes animate-preloader {
   0% {
-    transform: rotate(0deg);
+    transform: rotate(0);
   }
   100% {
     transform: rotate(360deg);
   }
 }
-
-/*--------------------------------------------------------------
-# Disable aos animation delay on mobile devices
---------------------------------------------------------------*/
 @media screen and (max-width: 768px) {
   [data-aos-delay] {
     transition-delay: 0 !important;
   }
 }
-
-/*--------------------------------------------------------------
-# Header
---------------------------------------------------------------*/
 #header {
   position: fixed;
   top: 0;
@@ -117,7 +96,6 @@ h1, h2, h3, h4, h5, h6 {
   padding: 15px;
   overflow-y: auto;
 }
-
 @media (max-width: 992px) {
   #header {
     width: 300px;
@@ -126,28 +104,20 @@ h1, h2, h3, h4, h5, h6 {
     left: -300px;
   }
 }
-
 @media (min-width: 992px) {
   #main {
     margin-left: 100px;
   }
 }
-
-/*--------------------------------------------------------------
-# Navigation Menu
---------------------------------------------------------------*/
-/* Desktop Navigation */
 .nav-menu * {
   margin: 0;
   padding: 0;
   list-style: none;
 }
-
 .nav-menu > ul > li {
   position: relative;
   white-space: nowrap;
 }
-
 .nav-menu a {
   display: flex;
   align-items: center;
@@ -163,16 +133,13 @@ h1, h2, h3, h4, h5, h6 {
   overflow: hidden;
   transition: 0.3s;
 }
-
 .nav-menu a i {
   font-size: 20px;
 }
-
 .nav-menu a span {
   padding: 0 5px 0 7px;
   color: #45505b;
 }
-
 @media (min-width: 992px) {
   .nav-menu a {
     width: 56px;
@@ -182,74 +149,65 @@ h1, h2, h3, h4, h5, h6 {
     color: #fff;
   }
 }
-
-.nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a {
+.nav-menu .active > a,
+.nav-menu a:hover,
+.nav-menu li:hover > a {
   color: #fff;
   background: #0563bb;
 }
-
-.nav-menu a:hover span, .nav-menu .active > a span, .nav-menu li:hover > a span {
+.nav-menu .active > a span,
+.nav-menu a:hover span,
+.nav-menu li:hover > a span {
   color: #fff;
 }
-
-.nav-menu a:hover, .nav-menu li:hover > a {
+.nav-menu a:hover,
+.nav-menu li:hover > a {
   width: 100%;
   color: #fff;
 }
-
-.nav-menu a:hover span, .nav-menu li:hover > a span {
+.nav-menu a:hover span,
+.nav-menu li:hover > a span {
   display: block;
 }
-
-/* Mobile Navigation */
 .mobile-nav-toggle {
   position: fixed;
   right: 15px;
   top: 15px;
   z-index: 9998;
   border: 0;
-  background: none;
+  background: 0 0;
   font-size: 24px;
   transition: all 0.4s;
-  outline: none !important;
+  outline: 0 !important;
   line-height: 1;
   cursor: pointer;
   text-align: right;
 }
-
 .mobile-nav-toggle i {
   color: #45505b;
 }
-
 .mobile-nav-active {
   overflow: hidden;
 }
-
 .mobile-nav-active #header {
   left: 0;
 }
-
 .mobile-nav-active .mobile-nav-toggle i {
   color: #0563bb;
 }
-
-/*--------------------------------------------------------------
-# Hero Section
---------------------------------------------------------------*/
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("img/hero-bg.webp") top right no-repeat;
+  background: url(http://dhruba-datta.netlify.app/img/hero-bg.webp) top right
+    no-repeat;
   background-size: cover;
   position: relative;
 }
-
 @media (min-width: 992px) {
   #hero {
     padding-left: 160px;
   }
 }
-
 #hero:before {
   content: "";
   background: rgba(255, 255, 255, 0.7);
@@ -259,7 +217,6 @@ h1, h2, h3, h4, h5, h6 {
   left: 0;
   right: 0;
 }
-
 #hero h1 {
   margin: 0;
   font-size: 70px;
@@ -267,24 +224,20 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 56px;
   color: #45505b;
 }
-
 #hero p {
   color: #45505b;
   margin: 15px 0 0 0;
   padding-left: 5px;
   font-size: 26px;
-  font-family: "Poppins", sans-serif;
+  font-family: Poppins, sans-serif;
 }
-
 #hero p span {
   color: #0563bb;
   letter-spacing: 1px;
 }
-
 #hero .social-links {
   margin-top: 30px;
 }
-
 #hero .social-links a {
   font-size: 40px;
   display: inline-block;
@@ -293,11 +246,9 @@ h1, h2, h3, h4, h5, h6 {
   margin-right: 20px;
   transition: 0.3s;
 }
-
 #hero .social-links a:hover {
   color: #0563bb;
 }
-
 @media (max-width: 992px) {
   #hero {
     text-align: center;
@@ -311,7 +262,7 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 20px;
     line-height: 24px;
   }
-   #hero .social-links a {
+  #hero .social-links a {
     font-size: 30px;
     display: inline-block;
     color: #45505b;
@@ -320,32 +271,25 @@ h1, h2, h3, h4, h5, h6 {
     transition: 0.3s;
   }
 }
-
-/*--------------------------------------------------------------
-# Sections General
---------------------------------------------------------------*/
 section {
   padding: 60px 0;
   overflow: hidden;
 }
-
 .section-title {
   text-align: center;
   padding-bottom: 30px;
 }
-
 .section-title h2 {
   font-size: 40px;
-  font-weight: bold;
+  font-weight: 700;
   text-transform: capitalize;
   margin-bottom: 10px;
   padding-bottom: 20px;
   position: relative;
   color: #45505b;
 }
-
 .section-title h2::before {
-  content: '';
+  content: "";
   position: absolute;
   display: block;
   width: 120px;
@@ -354,9 +298,8 @@ section {
   bottom: 1px;
   left: calc(50% - 60px);
 }
-
 .section-title h2::after {
-  content: '';
+  content: "";
   position: absolute;
   display: block;
   width: 40px;
@@ -365,42 +308,29 @@ section {
   bottom: 0;
   left: calc(50% - 20px);
 }
-
 .section-title p {
   margin-bottom: 0;
 }
-
-/*--------------------------------------------------------------
-# About
---------------------------------------------------------------*/
 .about .content h3 {
   font-weight: 700;
   font-size: 20px;
   color: #728394;
 }
-
 .about .content ul {
   list-style: none;
   padding: 0;
 }
-
 .about .content ul li {
   padding-bottom: 10px;
 }
-
 .about .content ul i {
   font-size: 20px;
   padding-right: 2px;
   color: #0563bb;
 }
-
 .about .content p:last-child {
   margin-bottom: 0;
 }
-
-/*--------------------------------------------------------------
-# Facts
---------------------------------------------------------------*/
 .facts .count-box {
   padding: 30px 30px 25px 30px;
   margin-top: 30px;
@@ -409,7 +339,6 @@ section {
   text-align: center;
   background: #fff;
 }
-
 .facts .count-box i {
   position: absolute;
   top: -25px;
@@ -421,24 +350,18 @@ section {
   color: #fff;
   border-radius: 50px;
 }
-
 .facts .count-box span {
   font-size: 36px;
   display: block;
   font-weight: 600;
   color: #011426;
 }
-
 .facts .count-box p {
   padding: 0;
   margin: 0;
-  font-family: "Raleway", sans-serif;
+  font-family: Raleway, sans-serif;
   font-size: 14px;
 }
-
-/*--------------------------------------------------------------
-# Resume
---------------------------------------------------------------*/
 .resume .resume-title {
   font-size: 26px;
   font-weight: 700;
@@ -446,24 +369,21 @@ section {
   margin-bottom: 20px;
   color: #45505b;
 }
-
 .resume .resume-item {
   padding: 0 0 20px 20px;
   margin-top: -2px;
   border-left: 2px solid #0563bb;
   position: relative;
 }
-
 .resume .resume-item h4 {
   line-height: 18px;
   font-size: 18px;
   font-weight: 600;
   text-transform: uppercase;
-  font-family: "Poppins", sans-serif;
+  font-family: Poppins, sans-serif;
   color: #0563bb;
   margin-bottom: 10px;
 }
-
 .resume .resume-item h5 {
   font-size: 16px;
   background: #f7f8f9;
@@ -471,27 +391,23 @@ section {
   display: inline-block;
   font-weight: 600;
   margin-bottom: 10px;
-} 
+}
 .resume .resume-item h6 {
   font-size: 15px;
   padding: 2px 1px;
   display: inline-block;
   font-weight: 600;
   margin-bottom: 10px;
-} 
-
+}
 .resume .resume-item ul {
   padding-left: 20px;
 }
-
 .resume .resume-item ul li {
   padding-bottom: 10px;
 }
-
 .resume .resume-item:last-child {
   padding-bottom: 0;
 }
-
 .resume .resume-item::before {
   content: "";
   position: absolute;
@@ -503,14 +419,9 @@ section {
   background: #fff;
   border: 2px solid #0563bb;
 }
-
-/*--------------------------------------------------------------
-# Portfolio
---------------------------------------------------------------*/
 .portfolio .portfolio-item {
   margin-bottom: 30px;
 }
-
 .portfolio #portfolio-flters {
   padding: 0;
   margin: 0 auto 25px auto;
@@ -520,7 +431,6 @@ section {
   border-radius: 50px;
   padding: 2px 15px;
 }
-
 .portfolio #portfolio-flters li {
   cursor: pointer;
   display: inline-block;
@@ -533,15 +443,13 @@ section {
   margin-bottom: 5px;
   transition: all 0.3s ease-in-out;
 }
-
-.portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
+.portfolio #portfolio-flters li.filter-active,
+.portfolio #portfolio-flters li:hover {
   color: #0563bb;
 }
-
 .portfolio #portfolio-flters li:last-child {
   margin-right: 0;
 }
-
 .portfolio .portfolio-wrap {
   transition: 0.3s;
   position: relative;
@@ -549,7 +457,6 @@ section {
   z-index: 1;
   background: rgba(69, 80, 91, 0.8);
 }
-
 .portfolio .portfolio-wrap::before {
   content: "";
   background: rgba(34, 34, 34, 0.9);
@@ -562,7 +469,6 @@ section {
   z-index: 2;
   opacity: 0;
 }
-
 .portfolio .portfolio-wrap .portfolio-info {
   opacity: 0;
   position: absolute;
@@ -578,7 +484,6 @@ section {
   justify-content: center;
   align-items: center;
 }
-
 .portfolio .portfolio-wrap .portfolio-info::before {
   display: block;
   content: "";
@@ -592,7 +497,6 @@ section {
   transition: all 0.5s ease 0s;
   z-index: 9994;
 }
-
 .portfolio .portfolio-wrap .portfolio-info::after {
   display: block;
   content: "";
@@ -606,38 +510,32 @@ section {
   transition: all 0.5s ease 0s;
   z-index: 9994;
 }
-
 .portfolio .portfolio-wrap .portfolio-info h4 {
   font-size: 20px;
-  color: #ffffff;
+  color: #fff;
   font-weight: 600;
 }
-
 .portfolio .portfolio-wrap .portfolio-info p {
-  color: #ffffff;
+  color: #fff;
   font-size: 14px;
   text-transform: uppercase;
   padding: 0;
   margin: 0;
 }
-
 .portfolio .portfolio-wrap .portfolio-links {
   text-align: center;
   z-index: 4;
 }
-
 .portfolio .portfolio-wrap .portfolio-links a {
-  color: #ffffff;
+  color: #fff;
   margin: 0 2px;
   font-size: 28px;
   display: inline-block;
   transition: 0.3s;
 }
-
 .portfolio .portfolio-wrap .portfolio-links a:hover {
   color: #00e1ffd0;
 }
-
 .portfolio .portfolio-wrap:hover::before {
   top: 0;
   left: 0;
@@ -645,31 +543,22 @@ section {
   bottom: 0;
   opacity: 1;
 }
-
 .portfolio .portfolio-wrap:hover .portfolio-info {
   opacity: 1;
 }
-
 .portfolio .portfolio-wrap:hover .portfolio-info::before {
   top: 15px;
   left: 15px;
 }
-
 .portfolio .portfolio-wrap:hover .portfolio-info::after {
   bottom: 15px;
   right: 15px;
 }
-
-
-/*--------------------------------------------------------------
-# Contact
---------------------------------------------------------------*/
 .contact .info {
   width: 100%;
   background: #fff;
   padding-top: 10px;
 }
-
 .contact .info i {
   font-size: 20px;
   color: #0563bb;
@@ -683,7 +572,6 @@ section {
   border-radius: 50px;
   transition: all 0.3s ease-in-out;
 }
-
 .contact .info h4 {
   padding: 0 0 0 60px;
   font-size: 28px;
@@ -691,109 +579,78 @@ section {
   margin-bottom: 5px;
   color: #45505b;
 }
-
 .contact .info p {
   padding: 0 0 0 60px;
   margin-bottom: 0;
   font-size: 18px;
   color: #728394;
 }
-
-.contact .info .email, .contact .info .phone {
+.contact .info .email,
+.contact .info .phone {
   margin-top: 40px;
 }
-
-.contact .info .email:hover i, .contact .info .address:hover i, .contact .info .phone:hover i {
+.contact .info .address:hover i,
+.contact .info .email:hover i,
+.contact .info .phone:hover i {
   background: #0563bb;
   color: #fff;
 }
-.btn{
+.btn {
   margin-top: 30px;
 }
-
 @-webkit-keyframes animate-loading {
   0% {
-    transform: rotate(0deg);
+    transform: rotate(0);
   }
   100% {
     transform: rotate(360deg);
   }
 }
-
 @keyframes animate-loading {
   0% {
-    transform: rotate(0deg);
+    transform: rotate(0);
   }
   100% {
     transform: rotate(360deg);
   }
 }
-
-/*--------------------------------------------------------------
-# Project Details
---------------------------------------------------------------*/
 .portfolio-details {
   padding: 40px 0;
 }
-
 .portfolio-details .portfolio-title {
   font-size: 26px;
   font-weight: 700;
   margin-bottom: 20px;
 }
-
-.portfolio-details .portfolio-details-carousel .owl-nav, .portfolio-details .portfolio-details-carousel .owl-dots {
+.portfolio-details .portfolio-details-carousel .owl-nav {
   margin-top: 5px;
   text-align: center;
 }
-
-.portfolio-details .portfolio-details-carousel .owl-dot {
-  display: inline-block;
-  margin: 0 5px;
-  width: 12px;
-  height: 12px;
-  border-radius: 50%;
-  background-color: #ddd !important;
-}
-
-.portfolio-details .portfolio-details-carousel .owl-dot.active {
-  background-color: #0563bb !important;
-}
-
 .portfolio-details .portfolio-info {
   padding-top: 45px;
 }
-
 .portfolio-details .portfolio-info h3 {
   font-size: 22px;
   font-weight: 400;
   margin-bottom: 20px;
 }
-
 .portfolio-details .portfolio-info ul {
   list-style: none;
   padding: 0;
   font-size: 15px;
 }
-
 .portfolio-details .portfolio-info ul li + li {
   margin-top: 10px;
 }
-
 .portfolio-details .portfolio-info p {
   font-size: 15px;
   padding: 15px 0 0 0;
 }
-
 @media (max-width: 992px) {
   .portfolio-details .portfolio-info {
     padding-top: 20px;
   }
 }
-
-/*--------------------------------------------------------------
-# Footer
---------------------------------------------------------------*/
 #footer {
   background: #f7f8f9;
   color: #45505b;
@@ -801,22 +658,20 @@ section {
   text-align: center;
   padding: 30px 0;
 }
-
 #footer h3 {
   font-size: 40px;
   font-weight: 700;
   text-transform: capitalize;
   position: relative;
-  font-family: "Poppins", sans-serif;
+  font-family: Poppins, sans-serif;
   padding: 0;
   margin: 0;
 }
-
 #footer h5 {
   font-size: 20px;
   font-weight: 400;
   position: relative;
-  font-family: "Poppins", sans-serif;
+  font-family: Poppins, sans-serif;
   padding: 0;
   margin-bottom: 100;
 }
@@ -826,11 +681,9 @@ section {
   padding: 0;
   margin: 0 0 40px 0;
 }
-
 #footer .social-links {
   margin-top: 15px;
 }
-
 #footer .social-links a {
   font-size: 34px;
   display: inline-block;
@@ -839,18 +692,15 @@ section {
   margin: 10px;
   transition: 0.3s;
 }
-
 #footer .social-links a:hover {
-  color: #000000;
+  color: #000;
 }
-
 #footer .copyright {
   font-size: 15px;
   font-weight: 500;
   margin-top: 20px;
 }
-
-.mail{
+.mail {
   position: relative;
   cursor: pointer;
   padding: 8px 15px;
@@ -863,7 +713,7 @@ section {
   border-radius: 5px;
 }
 .mail span {
-  color: white;
+  color: #fff;
   font-weight: 500;
   position: relative;
   mix-blend-mode: difference;
@@ -875,27 +725,21 @@ section {
   left: 0;
   width: 100%;
   height: 100%;
-  
-  background: rgb(0, 23, 85);
+  background: #001755;
   transition: transform 0.3s;
   transform: scaleX(0);
   transform-origin: right;
 }
 .mail:hover::before {
-
   transform: scaleX(1);
   transform-origin: left;
 }
-
-/*--------------------------------------------------------------
-# skill
---------------------------------------------------------------*/
 .skill .icon-box {
   text-align: center;
   padding: 70px 20px 80px 20px;
   transition: all ease-in-out 0.3s;
   background: #fff;
-  box-shadow: 0px 5px 90px 0px rgba(110, 123, 131, 0.05);
+  box-shadow: 0 5px 90px 0 rgba(110, 123, 131, 0.05);
 }
 .skill .icon-box .icon {
   margin: 0 auto;
@@ -937,7 +781,7 @@ section {
 }
 .skill .icon-box:hover {
   border-color: #fff;
-  box-shadow: 0px 0 35px 0 rgba(0, 0, 0, 0.08);
+  box-shadow: 0 0 35px 0 rgba(0, 0, 0, 0.08);
 }
 .skill .iconbox-blue i {
   color: #47aeff;
