--- a/index.css
+++ b/index.css
@@ -2,13 +2,16 @@ body {
   font-family: "Open Sans", sans-serif;
   color: #272829;
 }
+
 a {
   color: #0563bb;
 }
+
 a:hover {
   color: #067ded;
   text-decoration: none;
 }
+
 h1,
 h2,
 h3,
@@ -17,6 +20,7 @@ h5,
 h6 {
   font-family: Raleway, sans-serif;
 }
+
 .back-to-top {
   position: fixed;
   display: none;
@@ -30,17 +34,20 @@ h6 {
   transition: display 0.5s ease-in-out;
   z-index: 99999;
 }
+
 .back-to-top i {
   font-size: 24px;
   position: absolute;
   top: 7px;
   left: 8px;
 }
+
 .back-to-top:hover {
   color: #fff;
   background: #0678e3;
   transition: background 0.2s ease-in-out;
 }
+
 #preloader {
   position: fixed;
   top: 0;
@@ -51,6 +58,7 @@ h6 {
   overflow: hidden;
   background: #fff;
 }
+
 #preloader:before {
   content: "";
   position: fixed;
@@ -65,27 +73,33 @@ h6 {
   -webkit-animation: animate-preloader 1s linear infinite;
   animation: animate-preloader 1s linear infinite;
 }
+
 @-webkit-keyframes animate-preloader {
   0% {
     transform: rotate(0);
   }
+
   100% {
     transform: rotate(360deg);
   }
 }
+
 @keyframes animate-preloader {
   0% {
     transform: rotate(0);
   }
+
   100% {
     transform: rotate(360deg);
   }
 }
+
 @media screen and (max-width: 768px) {
   [data-aos-delay] {
     transition-delay: 0 !important;
   }
 }
+
 #header {
   position: fixed;
   top: 0;
@@ -96,6 +110,7 @@ h6 {
   padding: 15px;
   overflow-y: auto;
 }
+
 @media (max-width: 992px) {
   #header {
     width: 300px;
@@ -104,20 +119,24 @@ h6 {
     left: -300px;
   }
 }
+
 @media (min-width: 992px) {
   #main {
     margin-left: 100px;
   }
 }
+
 .nav-menu * {
   margin: 0;
   padding: 0;
   list-style: none;
 }
-.nav-menu > ul > li {
+
+.nav-menu>ul>li {
   position: relative;
   white-space: nowrap;
 }
+
 .nav-menu a {
   display: flex;
   align-items: center;
@@ -133,42 +152,51 @@ h6 {
   overflow: hidden;
   transition: 0.3s;
 }
+
 .nav-menu a i {
   font-size: 20px;
 }
+
 .nav-menu a span {
   padding: 0 5px 0 7px;
   color: #45505b;
 }
+
 @media (min-width: 992px) {
   .nav-menu a {
     width: 56px;
   }
+
   .nav-menu a span {
     display: none;
     color: #fff;
   }
 }
-.nav-menu .active > a,
+
+.nav-menu .active>a,
 .nav-menu a:hover,
-.nav-menu li:hover > a {
+.nav-menu li:hover>a {
   color: #fff;
   background: #0563bb;
 }
-.nav-menu .active > a span,
+
+.nav-menu .active>a span,
 .nav-menu a:hover span,
-.nav-menu li:hover > a span {
+.nav-menu li:hover>a span {
   color: #fff;
 }
+
 .nav-menu a:hover,
-.nav-menu li:hover > a {
+.nav-menu li:hover>a {
   width: 100%;
   color: #fff;
 }
+
 .nav-menu a:hover span,
-.nav-menu li:hover > a span {
+.nav-menu li:hover>a span {
   display: block;
 }
+
 .mobile-nav-toggle {
   position: fixed;
   right: 15px;
@@ -183,31 +211,37 @@ h6 {
   cursor: pointer;
   text-align: right;
 }
+
 .mobile-nav-toggle i {
   color: #45505b;
 }
+
 .mobile-nav-active {
   overflow: hidden;
 }
+
 .mobile-nav-active #header {
   left: 0;
 }
+
 .mobile-nav-active .mobile-nav-toggle i {
   color: #0563bb;
 }
+
 #hero {
   width: 100%;
   height: 100vh;
-  background: url(http://dhruba-datta.netlify.app/img/hero-bg.webp) top right
-    no-repeat;
+  background: url(http://dhruba-datta.netlify.app/img/hero-bg.webp) top right no-repeat;
   background-size: cover;
   position: relative;
 }
+
 @media (min-width: 992px) {
   #hero {
     padding-left: 160px;
   }
 }
+
 #hero:before {
   content: "";
   background: rgba(255, 255, 255, 0.7);
@@ -217,6 +251,7 @@ h6 {
   left: 0;
   right: 0;
 }
+
 #hero h1 {
   margin: 0;
   font-size: 70px;
@@ -224,6 +259,7 @@ h6 {
   line-height: 56px;
   color: #45505b;
 }
+
 #hero p {
   color: #45505b;
   margin: 15px 0 0 0;
@@ -231,13 +267,16 @@ h6 {
   font-size: 26px;
   font-family: Poppins, sans-serif;
 }
+
 #hero p span {
   color: #0563bb;
   letter-spacing: 1px;
 }
+
 #hero .social-links {
   margin-top: 30px;
 }
+
 #hero .social-links a {
   font-size: 40px;
   display: inline-block;
@@ -246,22 +285,27 @@ h6 {
   margin-right: 20px;
   transition: 0.3s;
 }
+
 #hero .social-links a:hover {
   color: #0563bb;
 }
+
 @media (max-width: 992px) {
   #hero {
     text-align: center;
   }
+
   #hero h1 {
     font-size: 40px;
     line-height: 36px;
   }
+
   #hero p {
     margin-top: 10px;
     font-size: 20px;
     line-height: 24px;
   }
+
   #hero .social-links a {
     font-size: 30px;
     display: inline-block;
@@ -271,14 +315,17 @@ h6 {
     transition: 0.3s;
   }
 }
+
 section {
   padding: 60px 0;
   overflow: hidden;
 }
+
 .section-title {
   text-align: center;
   padding-bottom: 30px;
 }
+
 .section-title h2 {
   font-size: 40px;
   font-weight: 700;
@@ -288,6 +335,7 @@ section {
   position: relative;
   color: #45505b;
 }
+
 .section-title h2::before {
   content: "";
   position: absolute;
@@ -298,6 +346,7 @@ section {
   bottom: 1px;
   left: calc(50% - 60px);
 }
+
 .section-title h2::after {
   content: "";
   position: absolute;
@@ -308,29 +357,36 @@ section {
   bottom: 0;
   left: calc(50% - 20px);
 }
+
 .section-title p {
   margin-bottom: 0;
 }
+
 .about .content h3 {
   font-weight: 700;
   font-size: 20px;
   color: #728394;
 }
+
 .about .content ul {
   list-style: none;
   padding: 0;
 }
+
 .about .content ul li {
   padding-bottom: 10px;
 }
+
 .about .content ul i {
   font-size: 20px;
   padding-right: 2px;
   color: #0563bb;
 }
+
 .about .content p:last-child {
   margin-bottom: 0;
 }
+
 .facts .count-box {
   padding: 30px 30px 25px 30px;
   margin-top: 30px;
@@ -339,6 +395,7 @@ section {
   text-align: center;
   background: #fff;
 }
+
 .facts .count-box i {
   position: absolute;
   top: -25px;
@@ -350,18 +407,21 @@ section {
   color: #fff;
   border-radius: 50px;
 }
+
 .facts .count-box span {
   font-size: 36px;
   display: block;
   font-weight: 600;
   color: #011426;
 }
+
 .facts .count-box p {
   padding: 0;
   margin: 0;
   font-family: Raleway, sans-serif;
   font-size: 14px;
 }
+
 .resume .resume-title {
   font-size: 26px;
   font-weight: 700;
@@ -369,12 +429,24 @@ section {
   margin-bottom: 20px;
   color: #45505b;
 }
+
 .resume .resume-item {
-  padding: 0 0 20px 20px;
+  padding: 0 0 0px 20px;
   margin-top: -2px;
   border-left: 2px solid #0563bb;
   position: relative;
 }
+
+.resume .resume-item h2 {
+  font-size: 16px;
+
+  padding: 5px 1px;
+  display: inline-block;
+  font-weight: 600;
+  margin: 10px 0px;
+  margin-bottom: 1px;
+}
+
 .resume .resume-item h4 {
   line-height: 18px;
   font-size: 18px;
@@ -382,8 +454,9 @@ section {
   text-transform: uppercase;
   font-family: Poppins, sans-serif;
   color: #0563bb;
-  margin-bottom: 10px;
+  margin: 15px 0px 10px;
 }
+
 .resume .resume-item h5 {
   font-size: 16px;
   background: #f7f8f9;
@@ -391,7 +464,9 @@ section {
   display: inline-block;
   font-weight: 600;
   margin-bottom: 10px;
+
 }
+
 .resume .resume-item h6 {
   font-size: 15px;
   padding: 2px 1px;
@@ -399,15 +474,20 @@ section {
   font-weight: 600;
   margin-bottom: 10px;
 }
+
 .resume .resume-item ul {
   padding-left: 20px;
+  margin-bottom: 0px;
 }
+
 .resume .resume-item ul li {
   padding-bottom: 10px;
 }
+
 .resume .resume-item:last-child {
   padding-bottom: 0;
 }
+
 .resume .resume-item::before {
   content: "";
   position: absolute;
@@ -419,9 +499,11 @@ section {
   background: #fff;
   border: 2px solid #0563bb;
 }
+
 .portfolio .portfolio-item {
   margin-bottom: 30px;
 }
+
 .portfolio #portfolio-flters {
   padding: 0;
   margin: 0 auto 25px auto;
@@ -431,6 +513,7 @@ section {
   border-radius: 50px;
   padding: 2px 15px;
 }
+
 .portfolio #portfolio-flters li {
   cursor: pointer;
   display: inline-block;
@@ -443,13 +526,16 @@ section {
   margin-bottom: 5px;
   transition: all 0.3s ease-in-out;
 }
+
 .portfolio #portfolio-flters li.filter-active,
 .portfolio #portfolio-flters li:hover {
   color: #0563bb;
 }
+
 .portfolio #portfolio-flters li:last-child {
   margin-right: 0;
 }
+
 .portfolio .portfolio-wrap {
   transition: 0.3s;
   position: relative;
@@ -457,6 +543,7 @@ section {
   z-index: 1;
   background: rgba(69, 80, 91, 0.8);
 }
+
 .portfolio .portfolio-wrap::before {
   content: "";
   background: rgba(34, 34, 34, 0.9);
@@ -469,6 +556,7 @@ section {
   z-index: 2;
   opacity: 0;
 }
+
 .portfolio .portfolio-wrap .portfolio-info {
   opacity: 0;
   position: absolute;
@@ -484,6 +572,7 @@ section {
   justify-content: center;
   align-items: center;
 }
+
 .portfolio .portfolio-wrap .portfolio-info::before {
   display: block;
   content: "";
@@ -497,6 +586,7 @@ section {
   transition: all 0.5s ease 0s;
   z-index: 9994;
 }
+
 .portfolio .portfolio-wrap .portfolio-info::after {
   display: block;
   content: "";
@@ -510,11 +600,13 @@ section {
   transition: all 0.5s ease 0s;
   z-index: 9994;
 }
+
 .portfolio .portfolio-wrap .portfolio-info h4 {
   font-size: 20px;
   color: #fff;
   font-weight: 600;
 }
+
 .portfolio .portfolio-wrap .portfolio-info p {
   color: #fff;
   font-size: 14px;
@@ -522,10 +614,12 @@ section {
   padding: 0;
   margin: 0;
 }
+
 .portfolio .portfolio-wrap .portfolio-links {
   text-align: center;
   z-index: 4;
 }
+
 .portfolio .portfolio-wrap .portfolio-links a {
   color: #fff;
   margin: 0 2px;
@@ -533,9 +627,11 @@ section {
   display: inline-block;
   transition: 0.3s;
 }
+
 .portfolio .portfolio-wrap .portfolio-links a:hover {
   color: #00e1ffd0;
 }
+
 .portfolio .portfolio-wrap:hover::before {
   top: 0;
   left: 0;
@@ -543,22 +639,27 @@ section {
   bottom: 0;
   opacity: 1;
 }
+
 .portfolio .portfolio-wrap:hover .portfolio-info {
   opacity: 1;
 }
+
 .portfolio .portfolio-wrap:hover .portfolio-info::before {
   top: 15px;
   left: 15px;
 }
+
 .portfolio .portfolio-wrap:hover .portfolio-info::after {
   bottom: 15px;
   right: 15px;
 }
+
 .contact .info {
   width: 100%;
   background: #fff;
   padding-top: 10px;
 }
+
 .contact .info i {
   font-size: 20px;
   color: #0563bb;
@@ -572,6 +673,7 @@ section {
   border-radius: 50px;
   transition: all 0.3s ease-in-out;
 }
+
 .contact .info h4 {
   padding: 0 0 0 60px;
   font-size: 28px;
@@ -579,78 +681,96 @@ section {
   margin-bottom: 5px;
   color: #45505b;
 }
+
 .contact .info p {
   padding: 0 0 0 60px;
   margin-bottom: 0;
   font-size: 18px;
   color: #728394;
 }
+
 .contact .info .email,
 .contact .info .phone {
   margin-top: 40px;
 }
+
 .contact .info .address:hover i,
 .contact .info .email:hover i,
 .contact .info .phone:hover i {
   background: #0563bb;
   color: #fff;
 }
+
 .btn {
   margin-top: 30px;
 }
+
 @-webkit-keyframes animate-loading {
   0% {
     transform: rotate(0);
   }
+
   100% {
     transform: rotate(360deg);
   }
 }
+
 @keyframes animate-loading {
   0% {
     transform: rotate(0);
   }
+
   100% {
     transform: rotate(360deg);
   }
 }
+
 .portfolio-details {
   padding: 40px 0;
 }
+
 .portfolio-details .portfolio-title {
   font-size: 26px;
   font-weight: 700;
   margin-bottom: 20px;
 }
+
 .portfolio-details .portfolio-details-carousel .owl-nav {
   margin-top: 5px;
   text-align: center;
 }
+
 .portfolio-details .portfolio-info {
   padding-top: 45px;
 }
+
 .portfolio-details .portfolio-info h3 {
   font-size: 22px;
   font-weight: 400;
   margin-bottom: 20px;
 }
+
 .portfolio-details .portfolio-info ul {
   list-style: none;
   padding: 0;
   font-size: 15px;
 }
-.portfolio-details .portfolio-info ul li + li {
+
+.portfolio-details .portfolio-info ul li+li {
   margin-top: 10px;
 }
+
 .portfolio-details .portfolio-info p {
   font-size: 15px;
   padding: 15px 0 0 0;
 }
+
 @media (max-width: 992px) {
   .portfolio-details .portfolio-info {
     padding-top: 20px;
   }
 }
+
 #footer {
   background: #f7f8f9;
   color: #45505b;
@@ -658,6 +778,7 @@ section {
   text-align: center;
   padding: 30px 0;
 }
+
 #footer h3 {
   font-size: 40px;
   font-weight: 700;
@@ -668,6 +789,7 @@ section {
   padding: 0;
   margin: 0;
 }
+
 #footer h5 {
   font-size: 20px;
   font-weight: 400;
@@ -676,15 +798,18 @@ section {
   padding: 0;
   margin-bottom: 100;
 }
+
 #footer p {
   font-size: 15px;
   font-style: italic;
   padding: 0;
   margin: 0 0 40px 0;
 }
+
 #footer .social-links {
   margin-top: 15px;
 }
+
 #footer .social-links a {
   font-size: 34px;
   display: inline-block;
@@ -693,14 +818,17 @@ section {
   margin: 10px;
   transition: 0.3s;
 }
+
 #footer .social-links a:hover {
   color: #000;
 }
+
 #footer .copyright {
   font-size: 15px;
   font-weight: 500;
   margin-top: 20px;
 }
+
 .mail {
   position: relative;
   cursor: pointer;
@@ -713,12 +841,14 @@ section {
   border: 2px solid #000;
   border-radius: 5px;
 }
+
 .mail span {
   color: #fff;
   font-weight: 500;
   position: relative;
   mix-blend-mode: difference;
 }
+
 .mail::before {
   content: "";
   position: absolute;
@@ -731,10 +861,12 @@ section {
   transform: scaleX(0);
   transform-origin: right;
 }
+
 .mail:hover::before {
   transform: scaleX(1);
   transform-origin: left;
 }
+
 .skill .icon-box {
   text-align: center;
   padding: 70px 20px 80px 20px;
@@ -742,6 +874,7 @@ section {
   background: #fff;
   box-shadow: 0 5px 90px 0 rgba(110, 123, 131, 0.05);
 }
+
 .skill .icon-box .icon {
   margin: 0 auto;
   width: 100px;
@@ -752,95 +885,122 @@ section {
   transition: ease-in-out 0.3s;
   position: relative;
 }
+
 .skill .icon-box .icon i {
   font-size: 36px;
   transition: 0.5s;
   position: relative;
 }
+
 .skill .icon-box .icon svg {
   position: absolute;
   top: 0;
   left: 0;
 }
+
 .skill .icon-box .icon svg path {
   transition: 0.5s;
   fill: #f5f5f5;
 }
+
 .skill .icon-box h4 {
   font-weight: 600;
   margin: 10px 0 15px 0;
   font-size: 22px;
 }
+
 .skill .icon-box h4 a {
   color: #45505b;
   transition: ease-in-out 0.3s;
 }
+
 .skill .icon-box h4 a:hover {
   color: #0065c4;
 }
+
 .skill .icon-box p {
   line-height: 24px;
   font-size: 14px;
   margin-bottom: 0;
 }
+
 .skill .icon-box:hover {
   border-color: #fff;
   box-shadow: 0 0 35px 0 rgba(0, 0, 0, 0.08);
 }
+
 .skill .iconbox-blue i {
   color: #47aeff;
 }
+
 .skill .iconbox-blue:hover .icon i {
   color: #fff;
 }
+
 .skill .iconbox-blue:hover .icon path {
   fill: #47aeff;
 }
+
 .skill .iconbox-orange i {
   color: #ffa76e;
 }
+
 .skill .iconbox-orange:hover .icon i {
   color: #fff;
 }
+
 .skill .iconbox-orange:hover .icon path {
   fill: #ffa76e;
 }
+
 .skill .iconbox-pink i {
   color: #e80368;
 }
+
 .skill .iconbox-pink:hover .icon i {
   color: #fff;
 }
+
 .skill .iconbox-pink:hover .icon path {
   fill: #e80368;
 }
+
 .skill .iconbox-yellow i {
   color: #ffbb2c;
 }
+
 .skill .iconbox-yellow:hover .icon i {
   color: #fff;
 }
+
 .skill .iconbox-yellow:hover .icon path {
   fill: #ffbb2c;
 }
+
 .skill .iconbox-red i {
   color: #ff5828;
 }
+
 .skill .iconbox-red:hover .icon i {
   color: #fff;
 }
+
 .skill .iconbox-red:hover .icon path {
   fill: #ff5828;
 }
+
 .skill .iconbox-teal i {
   color: #11dbcf;
 }
+
 .skill .iconbox-teal:hover .icon i {
   color: #fff;
 }
+
 .skill .iconbox-teal:hover .icon path {
   fill: #11dbcf;
 }
+
 .resume .resume-item b {
   color: rgba(46, 56, 64, 0.936);
 }
