--- a/index.css
+++ b/index.css
@@ -255,7 +255,9 @@ h6 {
 #hero h1 {
   margin: 0;
   font-size: 70px;
+  font-family: Poppins, sans-serif;
   font-weight: 700;
+  font-style: normal;
   line-height: 56px;
   color: #45505b;
 }
@@ -263,7 +265,7 @@ h6 {
 #hero p {
   color: #45505b;
   margin: 15px 0 0 0;
-  padding-left: 5px;
+  padding-left: 3px;
   font-size: 26px;
   font-family: Poppins, sans-serif;
 }
