title font and contact updated

--- a/index.css
+++ b/index.css
@@ -332,6 +332,7 @@ section {
   font-size: 40px;
   font-weight: 700;
   text-transform: capitalize;
+  font-family: Poppins, sans-serif;
   margin-bottom: 10px;
   padding-bottom: 20px;
   position: relative;
@@ -681,6 +682,7 @@ section {
   float: left;
   width: 44px;
   height: 44px;
+  margin-top: 6px;
   background: #eef7ff;
   display: flex;
   justify-content: center;
@@ -691,7 +693,8 @@ section {
 
 .contact .info h4 {
   padding: 0 0 0 60px;
-  font-size: 28px;
+  font-family: Poppins, sans-serif;
+  font-size: 22px;
   font-weight: 600;
   margin-bottom: 5px;
   color: #45505b;
@@ -716,9 +719,48 @@ section {
   color: #fff;
 }
 
-.btn {
-  margin-top: 30px;
+.mail {
+  position: relative;
+  cursor: pointer;
+  padding: 8px 15px;
+  margin-top: 42px;
+  margin-bottom: 25px;
+  font-family: Poppins, sans-serif;
+  font-size: 1.2em;
+  display: inline-block;
+  text-decoration: none;
+  font-weight: 600;
+  overflow: hidden;
+  color: #0563bb !important;
+  border: 2px solid #0563bb;
+  border-radius: 5px;
+  z-index: 2;
 }
+
+.mail:hover span {
+  color: #fff;
+  position: relative;
+}
+
+.mail::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #0563bb;
+  transition: transform 0.3s;
+  transform: scaleX(0);
+  transform-origin: right;
+}
+
+.mail:hover::before {
+  transform: scaleX(1);
+  background: #0563bb;
+  transform-origin: left;
+}
+
 
 @-webkit-keyframes animate-loading {
   0% {
@@ -842,43 +884,4 @@ section {
   font-size: 15px;
   font-weight: 500;
   margin-top: 20px;
-}
-
-.mail {
-  position: relative;
-  cursor: pointer;
-  padding: 8px 15px;
-  margin-top: 35px;
-  margin-bottom: 25px;
-  font-size: 1.2em;
-  display: inline-block;
-  text-decoration: none;
-  overflow: hidden;
-  border: 2px solid #000;
-  border-radius: 5px;
-}
-
-.mail span {
-  color: #ffffff;
-  font-weight: 500;
-  position: relative;
-  mix-blend-mode: difference;
-}
-
-.mail::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #001842;
-  transition: transform 0.3s;
-  transform: scaleX(0);
-  transform-origin: right;
-}
-
-.mail:hover::before {
-  transform: scaleX(1);
-  transform-origin: left;
 }
