--- a/index.css
+++ b/index.css
@@ -842,6 +842,11 @@ section {
   font-size: 14px;
   text-align: center;
   padding: 30px 0;
+  padding-bottom: 25px;
+}
+
+element.style {
+  padding-bottom: 22px;
 }
 
 #footer h3 {
