updated the updates

--- a/index.css
+++ b/index.css
@@ -719,6 +719,11 @@ section {
   color: #728394;
 }
 
+.contact p {
+  margin-bottom: 10px;
+  color: #728394;
+}
+
 .contact .info .email,
 .contact .info .phone {
   margin-top: 40px;
